// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template render snapshots > renders eslint config for react 1`] = `
"import antfu from '@antfu/eslint-config'

export default antfu({
  ignores: ['docs/**'],
  react: true,
})
"
`;

exports[`template render snapshots > renders eslint config for vue 1`] = `
"import antfu from '@antfu/eslint-config'

export default antfu({
  ignores: ['docs/**'],
  vue: true,
})
"
`;

exports[`template render snapshots > renders react counter component with jotai 1`] = `
"import { useAtom } from 'jotai'
import { countAtom } from '../stores/counter'

export default function Counter() {
  const [count, setCount] = useAtom(countAtom)
  const inc = () => setCount(c => c + 1)
  const dec = () => setCount(c => c - 1)
  return (
    <div className="counter">
      <div className="counter-row">
        <button type="button" className="btn btn-sm" onClick={dec} aria-label="decrement">-</button>
        <span className="count" aria-live="polite">{count}</span>
        <button type="button" className="btn btn-sm" onClick={inc} aria-label="increment">+</button>
      </div>
    </div>
  )
}
"
`;

exports[`template render snapshots > renders react counter component with zustand 1`] = `
"import { useCounterStore } from '../stores/counter'

export default function Counter() {
  const count = useCounterStore(s => s.count)
  const inc = useCounterStore(s => s.inc)
  const dec = useCounterStore(s => s.dec)
  return (
    <div className="counter">
      <div className="counter-row">
        <button type="button" className="btn btn-sm" onClick={dec} aria-label="decrement">-</button>
        <span className="count" aria-live="polite">{count}</span>
        <button type="button" className="btn btn-sm" onClick={inc} aria-label="increment">+</button>
      </div>
    </div>
  )
}
"
`;

exports[`template render snapshots > renders react counter component without state management 1`] = `
"import { useState } from 'react'

export default function Counter() {
  const [count, setCount] = useState(0)
  const inc = () => setCount(c => c + 1)
  const dec = () => setCount(c => c - 1)
  return (
    <div className="counter">
      <div className="counter-row">
        <button type="button" className="btn btn-sm" onClick={dec} aria-label="decrement">-</button>
        <span className="count" aria-live="polite">{count}</span>
        <button type="button" className="btn btn-sm" onClick={inc} aria-label="increment">+</button>
      </div>
    </div>
  )
}
"
`;

exports[`template render snapshots > renders react counter store with jotai 1`] = `
"import { atom } from 'jotai'

export const countAtom = atom<number>(0)
"
`;

exports[`template render snapshots > renders react counter store with zustand 1`] = `
"import { create } from 'zustand'

interface CounterState {
  count: number
  inc: () => void
  dec: () => void
}

export const useCounterStore = create<CounterState>(set => ({
  count: 0,
  inc: () => set(s => ({ count: s.count + 1 })),
  dec: () => set(s => ({ count: s.count - 1 })),
}))
"
`;

exports[`template render snapshots > renders react main with react-router 1`] = `
"import './style.less'
import { createRoot } from 'react-dom/client'

import { RouterProvider } from 'react-router-dom'
import router from './router'
createRoot(document.getElementById('root')!).render(<RouterProvider router={router} />)
"
`;

exports[`template render snapshots > renders react main with tanstack router 1`] = `
"import './style.scss'
import { createRoot } from 'react-dom/client'

import { RouterProvider } from '@tanstack/react-router'
import router from './router'
createRoot(document.getElementById('root')!).render(<RouterProvider router={router} />)
"
`;

exports[`template render snapshots > renders react main without router 1`] = `
"import './style.scss'
import { createRoot } from 'react-dom/client'

import App from './pages/app'
createRoot(document.getElementById('root')!).render(<App />)
"
`;

exports[`template render snapshots > renders react shared style without router-specific config branching 1`] = `
"
@import "tailwindcss";

/* ==== Base & Counter ==== */
.container { max-width: 960px; margin: 0 auto; padding: 0 16px; }
.content { padding: 8px 0; }
h1 { font-size: 22px; margin: 16px 0 8px; }
h2 { font-size: 18px; margin: 14px 0 8px; }
p { margin: 8px 0; }
.block { margin: 12px 0; }
.home { padding: 16px 0; }
.counter { margin: 12px auto; max-width: 320px; }
.counter-row { display: flex; align-items: center; gap: 8px; justify-content: center; }
.count { min-width: 42px; text-align: center; padding: 4px 8px; border: 1px solid #ddd; border-radius: 6px; background: #fff; }
.btn { padding: 6px 10px; border: 1px solid #d0d0d0; background: #fafafa; border-radius: 6px; cursor: pointer; transition: background .15s; }
.btn:hover { background: #f0f0f0; }
.btn.btn-sm { font-size: 14px; }

/* ==== Router (adds navigation & about page) ==== */
.nav { display: flex; gap: 8px; padding: 12px 0; flex-wrap: wrap; }
.nav-link { text-decoration: none; color: inherit; padding: 4px 8px; border-radius: 4px; }
.nav-link:hover { background: #f3f3f3; }
.router-link-active { font-weight: 600; text-decoration: underline; }
.about { padding: 16px 0; }

"
`;

exports[`template render snapshots > renders vite config for react with tailwind 1`] = `
"import tailwindcss from '@tailwindcss/vite'
import react from '@vitejs/plugin-react'
import { defineConfig } from 'vite'

// https://vite.dev/config/
export default defineConfig({
  plugins: [
    react(),
    tailwindcss(),
  ],
  server: {
    host: '127.0.0.1',
    port: 3000,
    open: true,
  },
})
"
`;

exports[`template render snapshots > renders vite config for vue with tailwind 1`] = `
"import tailwindcss from '@tailwindcss/vite'
import vue from '@vitejs/plugin-vue'
import { defineConfig } from 'vite'

// https://vite.dev/config/
export default defineConfig({
  plugins: [
    vue(),
    tailwindcss(),
  ],
  server: {
    host: '127.0.0.1',
    port: 3000,
    open: true,
  },
})
"
`;

exports[`template render snapshots > renders vite config for vue without tailwind 1`] = `
"import vue from '@vitejs/plugin-vue'
import { defineConfig } from 'vite'

// https://vite.dev/config/
export default defineConfig({
  plugins: [
    vue(),
  ],
  server: {
    host: '127.0.0.1',
    port: 3000,
    open: true,
  },
})
"
`;

exports[`template render snapshots > renders vue app with router and state management 1`] = `
"<script setup lang="ts">
import { RouterView } from 'vue-router'
</script>

<template>
  <div id="app">
    <main class="container">
      <nav class="nav">
        <RouterLink to="/" class="nav-link">Home</RouterLink>
        <RouterLink to="/about" class="nav-link">About</RouterLink>
      </nav>

      <section class="content">
        <RouterView />
      </section>
    </main>
  </div>
</template>

<style scoped lang="less">.container { max-width: 960px; margin: 0 auto; padding: 0 16px; }
.nav { display: flex; gap: 8px; padding: 12px 0; flex-wrap: wrap; }
.nav-link { text-decoration: none; color: inherit; padding: 4px 8px; }
.router-link-active { font-weight: 600; text-decoration: underline; }
.content { padding: 8px 0; }
</style>
"
`;

exports[`template render snapshots > renders vue app without router and state management 1`] = `
"<script setup lang="ts">
import Home from './views/Home.vue'
</script>

<template>
  <div id="app" class="container">
    <Home />
  </div>
</template>

<style scoped lang="scss">.container { max-width: 960px; margin: 0 auto; padding: 0 16px; }
</style>
"
`;
